# ITK-OpenCV-Bridge-Tutorial

./: CMakeLists.txt  README
Documents/: CMakeLists.txt
Documents/Tutorial/: CMakeLists.txt  ITKIntegrationWithApplications.tex  ITKIntroduction.tex  ITKOpenCVBridge.tex  ITKOpenCVBridgeTutorial.tex  ITKOverview.tex  ITKVideoFilters.tex  OpenCVIntroduction.tex  SoftwareEnvironment.tex  SoftwarePreparation.tex  SoftwarePreparation1.tex  SoftwarePreparation2.tex
Exercises/: CMakeLists.txt
Exercises/ITKIntroduction/: CMakeLists.txt
Exercises/ITKIntroduction/exercise1/: BasicImageFilteringITK.cxx  BasicImageFilteringITKAnswer1.cxx  BasicImageFilteringITKAnswer2.cxx  CMakeLists.txt  build.sh
Exercises/ITKOpenCVBridge/: CMakeLists.txt
Exercises/ITKOpenCVBridge/exercise1/: BasicFilteringITKOpenCVBridge.cxx  BasicFilteringOpenCVBridge.cxx  BasicFilteringOpenCVBridgeAnswer.cxx  CMakeLists.txt  Ex1_BasicFilteringOpenCVBridge.cxx  Ex1_BasicFilteringOpenCVBridgeAnswer.cxx
Exercises/ITKOpenCVBridge/exercise2/: BasicFilteringOpenCVBridge.cxx  BasicFilteringOpenCVBridgeAnswer.cxx  BasicVideoFilteringITKOpenCVBridgeAnswer.cxx  CMakeLists.txt  Ex2_BasicFilteringOpenCVBridge.cxx  Ex2_BasicFilteringOpenCVBridgeAnswer.cxx
Exercises/ITKVideoPipeline/: CMakeLists.txt
Exercises/ITKVideoPipeline/exercise1/: CMakeLists.txt  Ex1_ITKVideoPipeline.cxx  Ex1_ITKVideoPipelineAnswer.cxx  ITKVideoPipeline.cxx  ITKVideoPipelineAnswer.cxx
Exercises/ITKVideoPipeline/exercise2/: CMakeLists.txt  Ex2_ITKVideoPipeline.cxx  Ex2_ITKVideoPipelineAnswer.cxx  ITKVideoMultiFrameFilters.cxx  ITKVideoMultiFrameFiltersAnswer2.cxx  ITKVideoPipeline.cxx  ITKVideoPipelineAnswer.cxx  ITKVideoPipelineAnswer_backup.cxx
Exercises/OpenCVIntroduction/: CMakeLists.txt
Exercises/OpenCVIntroduction/exercise1/: BasicFilteringOpenCV.cxx  BasicFilteringOpenCVAnswer.cxx  CMakeLists.txt  HelloWorldOpenCV.cxx
Exercises/OpenCVIntroduction/exercise2/: BasicVideoFilteringOpenCV.cxx  BasicVideoFilteringOpenCVAnswer.cxx  CMakeLists.txt
